[package]
version = "0.0.22"

name = "libharu_ng"
description = "Generate PDFs with Rust using libharu"
authors = ["Bastian Bense <bb@neosw.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bastibense/libharu_ng"
homepage = "https://github.com/bastibense/libharu_ng"
categories = [
  "external-ffi-bindings",
  "api-bindings",
  "pdf",
  "libharu",
  "generator",
  "generation",
  "pdflib",
  "libpdf",
]

edition = "2021"
build = "build.rs"

exclude = [
  ".github",
  ".gitignore",
  ".dockerignore",
  "Dockerfile",
  "*.code-workspace",
  ".DS_Store",
]

[dependencies]

[build-dependencies]


cc = "1.0.83"
pkg-config = "0.3.29"
cmake = "0.1.50"
